--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+	<div class="block">
+		<p><span>Lorem ipsum dolor sit</span>, amet consectetur adipisicing elit. Similique optio corporis, laudantium iusto
+			quisquamomnis quaerat porro nostrum eius necessitatibus fugiat eum ipsum ut numquam ipsa autem explicabo
+			saepetempore!
+		</p>
+	</div>
 </body>
 
 </html>
